--- a/templates/lessons_list.html
+++ b/templates/lessons_list.html
@@ -34,6 +34,42 @@ All lessons
             display: block;
         }
     </style>
+<iframe src="https://yandex.ru/map-widget/v1/-/CBaha6tuKA" width="100%" height="400"
+	frameborder="0"></iframe>
+
+<body>
+</div>
+	<footer class="container-fluid bottom_contacts">
+		<div class="container">
+			<div class="row">
+{#				<div class="col-sm-8">#}
+{#					<p id="inst1">© IDG RAS#}
+{#						<br>#}
+{#						Institute of geosphere dynamics of Russian academy of sciences#}
+{#					<hr>#}
+{#					GEOPHYSICAL OBSERVATORY MIKHNEVO</p>#}
+{##}
+{#				</div>#}
+				<div class="col-sm-4" id="contacts">
+{#					<img id="image-mail" src="../img/message.png">#}
+					<p id="mail">geospheres@idg.chph.ras.ru</p>
+					<br>
+{#					<img id="image-phone" src="../img/phone.png">#}
+					<p id="phone">8 (499) 137-66-11</p>
+					<br>
+					<a href="mailto:geospheres@idg.chph.ras.ru">
+						<div id="contact_us">
+							<p>CONTACTS US</p>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
+</div>
+</body>
+{#<script src="js/script.js"></script>#}
+</html>
 
 <!--<div class="container px-4 py-5" id="terms-table">-->
 <!--    <div class="table-responsive">-->
@@ -65,3 +101,136 @@ All lessons
 <!--      </div>-->
 <!--</div>-->
 {% endblock %}
+
+{#<!DOCTYPE html>#}
+{#<html lang="ru">#}
+{#<head>#}
+{#	<meta charset="utf-8">#}
+{#	<title>Geophysical Observatory Mikhnevo</title>#}
+{#	<meta name="viewport" content="width=device-width, initial-scale=1">#}
+{#	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"#}
+{#		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">#}
+{#	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>#}
+{#	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
+{#	<link href="css/index-style.css" rel="stylesheet">#}
+{#	<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">#}
+{#	<!-- Yandex.Metrika counter -->#}
+{#	<script type="text/javascript">#}
+{#		(function (d, w, c) {#}
+{#			(w[c] = w[c] || []).push(function () {#}
+{#				try {#}
+{#					w.yaCounter44852911 = new Ya.Metrika({#}
+{#						id: 44852911,#}
+{#						clickmap: true,#}
+{#						trackLinks: true,#}
+{#						accurateTrackBounce: true,#}
+{#						webvisor: true#}
+{#					});#}
+{#				} catch (e) {#}
+{#				}#}
+{#			});#}
+{##}
+{#			var n = d.getElementsByTagName("script")[0],#}
+{#				s = d.createElement("script"),#}
+{#				f = function () {#}
+{#					n.parentNode.insertBefore(s, n);#}
+{#				};#}
+{#			s.type = "text/javascript";#}
+{#			s.async = true;#}
+{#			s.src = "https://mc.yandex.ru/metrika/watch.js";#}
+{##}
+{#			if (w.opera == "[object Opera]") {#}
+{#				d.addEventListener("DOMContentLoaded", f, false);#}
+{#			} else {#}
+{#				f();#}
+{#			}#}
+{#		})(document, window, "yandex_metrika_callbacks");#}
+{#	</script>#}
+{#	<noscript>#}
+{#		<div><img src="https://mc.yandex.ru/watch/44852911" style="position:absolute; left:-9999px;" alt=""/></div>#}
+{#	</noscript>#}
+{#	<!-- /Yandex.Metrika counter -->#}
+{#</head>#}
+{#<body>#}
+{##}
+{#<nav class="navbar navbar-default navbar-fixed-top">#}
+{#	<div class="container-fluid" id="header">#}
+{#		<div id="top-banner" class="row xs-hidden">#}
+{#			<div class="container">#}
+{#				<img id="image-emb" src="../img/emb.png">#}
+{#				<p id="name">Geophysical Observatory Mikhnevo</p>#}
+{#			</div>#}
+{#		</div>#}
+{#		<div id="navbar-header-wrapper" class="container">#}
+{#			<div class="navbar-header">#}
+{#				<button id="menu-button" type="button" class="navbar-toggle" data-toggle="collapse"#}
+{#						data-target="#header-nav">#}
+{#					<span class="icon-bar"></span>#}
+{#					<span class="icon-bar"></span>#}
+{#					<span class="icon-bar"></span>#}
+{#				</button>#}
+{#			</div>#}
+{#			<div class="collapse navbar-collapse" id="header-nav">#}
+{#				<ul class="nav nav-justified">#}
+{#					<li><a href="index.html">HOME</a></li>#}
+{#					<li><a href="data.html">DATA</a></li>#}
+{#					<li><a href="equipment.html">EQUIPMENT</a></li>#}
+{#					<li><a href="contacts.html" class="active">CONTACTS</a></li>#}
+{#				</ul>#}
+{#			</div>#}
+{#		</div>#}
+{#	</div>#}
+{#</nav>#}
+{##}
+{#<div id="main">#}
+{#	<div class="container-fluid">#}
+{#		<div class="row" id="cont">#}
+{#			<div class="container">#}
+{#				<img class="logo" src="../img/phone.png">&emsp;&emsp;<p>+7 (499) 137-66-11</p>#}
+{#				<br>#}
+{#				<img class="logo" src="../img/message.png">&emsp;&emsp;<p>geospheres@idg.chph.ras.ru</p>#}
+{#				<br>#}
+{#				<img class="logo" src="../img/place.png">&emsp;&emsp;<p>38k1, Leninsky prospekt,</p> &nbsp;<p id="Moscow">Moscow, Russia,#}
+{#				119334</p>#}
+{#				<br>#}
+{#				<img class="logo" src="../img/site.png">&emsp;&emsp;<p>geospheres-dynamics.com</p>#}
+{#				<br>#}
+{#				<br>#}
+{#				<iframe src="https://yandex.ru/map-widget/v1/-/CBaha6tuKA" width="100%" height="400"#}
+{#						frameborder="0"></iframe>#}
+{##}
+{#			</div>#}
+{#		</div>#}
+{##}
+{#	</div>#}
+{#	<footer class="container-fluid bottom_contacts">#}
+{#		<div class="container">#}
+{#			<div class="row">#}
+{#				<div class="col-sm-8">#}
+{#					<p id="inst1">© IDG RAS#}
+{#						<br>#}
+{#						Institute of geosphere dynamics of Russian academy of sciences#}
+{#					<hr>#}
+{#					GEOPHYSICAL OBSERVATORY MIKHNEVO</p>#}
+{##}
+{#				</div>#}
+{#				<div class="col-sm-4" id="contacts">#}
+{#					<img id="image-mail" src="../img/message.png">#}
+{#					<p id="mail">geospheres@idg.chph.ras.ru</p>#}
+{#					<br>#}
+{#					<img id="image-phone" src="../img/phone.png">#}
+{#					<p id="phone">8 (499) 137-66-11</p>#}
+{#					<br>#}
+{#					<a href="mailto:geospheres@idg.chph.ras.ru">#}
+{#						<div id="contact_us">#}
+{#							<p>CONTACTS US</p>#}
+{#						</div>#}
+{#					</a>#}
+{#				</div>#}
+{#			</div>#}
+{#		</div>#}
+{#	</footer>#}
+{#</div>#}
+{#</body>#}
+{#<script src="js/script.js"></script>#}
+{#</html>#}
