add date to input

--- a/templates/lessons_list.html
+++ b/templates/lessons_list.html
@@ -66,10 +66,13 @@ All lessons
 			</div>
 		</div>
 	</footer>
-</div>
+{# <footer class="footer pt-3 mt-4 text-muted border-top">© IDG RAS#}
+{#						<br>#}
+{#						Institute of geosphere dynamics of Russian academy of sciences</footer>#}
+{#</div>#}
 </body>
 {#<script src="js/script.js"></script>#}
-</html>
+{#</html>#}
 
 <!--<div class="container px-4 py-5" id="terms-table">-->
 <!--    <div class="table-responsive">-->
