--- a/templates/index.html
+++ b/templates/index.html
@@ -139,9 +139,9 @@
     <div id="sideNavigation" class="sidenav">
       <a href="#" class="close-btn">&times;</a>
       <a href="#">Data</a>
-      <a href="/add-term">VLF</a>
+      <a href="/date-selection">VLF</a>
       <a href="#">Equipment</a>
-      <a href="/lessons-list">Contacts</a>
+      <a href="/contacts">Contacts</a>
     </div>
 {#    <nav class="topnav">#}
 {#      <a href="#" class="ham-icon" style="display: inline-block; vertical-align: center;">#}
@@ -254,7 +254,7 @@
                     <div>
 <!--                        <h3 class="fs-2">Форма для добавления слова</h3>-->
 <!--                        <p class="fst-italic">Вы можете добавить свое слово, его перевод и иллюстрацию по желанию. </p>-->
-                        <a href="/add-term" class="btn btn-primary" style="background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                        <a href="/date-selection" class="btn btn-primary" style="background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
                             VLF data
                         </a>
                     </div>
@@ -298,7 +298,7 @@
                     <div>
 <!--                        <h3 class="fs-2">Контакты</h3>-->
 <!--                        <p class="fst-italic">Общая таблица со всеми словами из карточек. </p>-->
-                        <a href="/lessons-list" class="btn btn-primary" style="background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                        <a href="/contacts" class="btn btn-primary" style="background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
                             Contacts
                         </a>
                     </div>
