date check and refactor

--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -301,7 +301,7 @@ Add word
             }
         </script>
         <div class="row px-5 py-2">
-            <button type="submit" formaction="/vlf-data" class="btn btn-info" style="font-size: 20px; color: white; margin: 0 auto; background-color: #00a2b7; width: 150px; height: 45px; border: #00a2b7; display: inline-block">View</button>
+            <button type="submit" formaction="/get-vlf-data" class="btn btn-info" style="font-size: 20px; color: white; margin: 0 auto; background-color: #00a2b7; width: 150px; height: 45px; border: #00a2b7; display: inline-block">View</button>
         </div>
     </form>
 {% endblock %}
