--- a/templates/index.html
+++ b/templates/index.html
@@ -305,7 +305,9 @@
                 </div>
             </div>
         </div>
-        <footer class="footer pt-3 mt-4 text-muted border-top">© 2023</footer>
+        <footer class="footer pt-3 mt-4 text-muted border-top">© IDG RAS
+						<br>
+						Institute of geosphere dynamics of Russian academy of sciences</footer>
     </div>
 </main>
 </body>
